--- a/environment.yml
+++ b/environment.yml
@@ -1,235 +1,16 @@
-name: om_agent_env
+name: om-agent
 channels:
   - defaults
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
+  - conda-forge
 dependencies:
-  - blas=1.0=openblas
-  - brotli-python=1.0.9=py312h313beb8_9
-  - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2024.12.31=hca03da5_0
-  - certifi=2025.1.31=py312hca03da5_0
-  - expat=2.6.4=h313beb8_0
-  - frozenlist=1.5.0=py312h80987f9_0
-  - greenlet=3.1.1=py312h313beb8_0
-  - h11=0.14.0=py312hca03da5_0
-  - httpx-sse=0.4.0=py312hca03da5_0
-  - jsonpatch=1.33=py312hca03da5_1
-  - libcxx=14.0.6=h848a8c0_0
-  - libffi=3.4.4=hca03da5_1
-  - libgfortran=5.0.0=11_3_0_hca03da5_28
-  - libgfortran5=11.3.0=h009349e_28
-  - libopenblas=0.3.21=h269037a_0
-  - llvm-openmp=14.0.6=hc6e5704_0
-  - multidict=6.1.0=py312h80987f9_0
-  - mypy_extensions=1.0.0=py312hca03da5_0
-  - ncurses=6.4=h313beb8_0
-  - numpy-base=2.0.1=py312he047099_1
-  - openssl=3.0.15=h80987f9_0
-  - packaging=24.2=py312hca03da5_0
-  - pip=25.0=py312hca03da5_0
-  - pydantic-settings=2.6.1=py312hca03da5_0
-  - pysocks=1.7.1=py312hca03da5_0
-  - python=3.12.8=h99e199e_0
-  - pyyaml=6.0.2=py312h80987f9_0
-  - readline=8.2=h1a28f6b_0
-  - requests=2.32.3=py312hca03da5_1
-  - requests-toolbelt=1.0.0=py312hca03da5_0
-  - sqlite=3.45.3=h80987f9_0
-  - tenacity=9.0.0=py312hca03da5_0
-  - tk=8.6.14=h6ba3021_0
-  - typing-extensions=4.12.2=py312hca03da5_0
-  - typing_extensions=4.12.2=py312hca03da5_0
-  - typing_inspect=0.9.0=py312hca03da5_0
-  - urllib3=2.3.0=py312hca03da5_0
-  - wheel=0.45.1=py312hca03da5_0
-  - xz=5.4.6=h80987f9_1
-  - yaml=0.2.5=h1a28f6b_0
-  - zlib=1.2.13=h18a0788_1
+  - python=3.9
+  - pip
   - pip:
-      - aiohappyeyeballs==2.4.6
-      - aiohttp==3.11.12
-      - aiosignal==1.3.2
-      - aiosqlite==0.20.0
-      - altair==5.5.0
-      - annotated-types==0.7.0
-      - anthropic==0.45.2
-      - anyio==4.8.0
-      - argcomplete==3.5.3
-      - asgiref==3.8.1
-      - attrs==25.1.0
-      - backoff==2.2.1
-      - bcrypt==4.2.1
-      - beautifulsoup4==4.13.3
-      - blinker==1.9.0
-      - boto3==1.36.18
-      - botocore==1.36.18
-      - build==1.2.2.post1
-      - cachetools==5.5.1
-      - charset-normalizer==3.4.1
-      - chroma-hnswlib==0.7.6
-      - chromadb==0.6.3
-      - click==8.1.8
-      - colorama==0.4.6
-      - coloredlogs==15.0.1
-      - dataclasses-json==0.6.7
-      - deprecated==1.2.18
-      - distro==1.9.0
-      - duckduckgo-search==7.3.2
-      - durationpy==0.9
-      - et-xmlfile==2.0.0
-      - fastapi==0.115.8
-      - filelock==3.17.0
-      - filetype==1.2.0
-      - flask==3.1.0
-      - flatbuffers==25.2.10
-      - fsspec==2025.2.0
-      - geojson==2.5.0
-      - gitdb==4.0.12
-      - gitpython==3.1.44
-      - google-ai-generativelanguage==0.6.15
-      - google-api-core==2.24.1
-      - google-api-python-client==2.160.0
-      - google-auth==2.38.0
-      - google-auth-httplib2==0.2.0
-      - google-generativeai==0.8.4
-      - googleapis-common-protos==1.66.0
-      - gritql==0.1.5
-      - groq==0.18.0
-      - grpcio==1.70.0
-      - grpcio-status==1.70.0
-      - grpcio-tools==1.70.0
-      - h2==4.2.0
-      - hpack==4.1.0
-      - httpcore==1.0.7
-      - httplib2==0.22.0
-      - httptools==0.6.4
-      - httpx==0.28.1
-      - huggingface-hub==0.28.1
-      - humanfriendly==10.0
-      - hyperframe==6.1.0
-      - idna==3.10
-      - importlib-metadata==8.5.0
-      - importlib-resources==6.5.2
-      - itsdangerous==2.2.0
-      - jinja2==3.1.5
-      - jiter==0.8.2
-      - jmespath==1.0.1
-      - jsonpointer==3.0.0
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2024.10.1
-      - kubernetes==32.0.0
-      - langchain==0.3.18
-      - langchain-anthropic==0.3.7
-      - langchain-aws==0.2.12
-      - langchain-cli==0.0.35
-      - langchain-community==0.3.17
-      - langchain-core==0.3.34
-      - langchain-google-genai==2.0.9
-      - langchain-groq==0.2.4
-      - langchain-ollama==0.2.3
-      - langchain-openai==0.2.14
-      - langchain-text-splitters==0.3.6
-      - langgraph==0.2.71
-      - langgraph-checkpoint==2.0.12
-      - langgraph-checkpoint-sqlite==2.0.3
-      - langgraph-sdk==0.1.51
-      - langserve==0.3.1
-      - langsmith==0.3.8
-      - lxml==5.3.1
-      - markdown-it-py==3.0.0
-      - markupsafe==3.0.2
-      - marshmallow==3.26.1
-      - mdurl==0.1.2
-      - mmh3==5.1.0
-      - monotonic==1.6
-      - mpmath==1.3.0
-      - msgpack==1.1.0
-      - narwhals==1.26.0
-      - numexpr==2.10.2
-      - numpy==2.2.2
-      - oauthlib==3.2.2
-      - ollama==0.4.7
-      - onnxruntime==1.20.1
-      - openai==1.61.1
-      - openpyxl==3.1.5
-      - opentelemetry-api==1.30.0
-      - opentelemetry-exporter-otlp-proto-common==1.30.0
-      - opentelemetry-exporter-otlp-proto-grpc==1.30.0
-      - opentelemetry-instrumentation==0.51b0
-      - opentelemetry-instrumentation-asgi==0.51b0
-      - opentelemetry-instrumentation-fastapi==0.51b0
-      - opentelemetry-proto==1.30.0
-      - opentelemetry-sdk==1.30.0
-      - opentelemetry-semantic-conventions==0.51b0
-      - opentelemetry-util-http==0.51b0
-      - orjson==3.10.15
-      - overrides==7.7.0
-      - pandas==2.2.3
-      - pillow==11.1.0
-      - pipx==1.7.1
-      - platformdirs==4.3.6
-      - portalocker==2.10.1
-      - posthog==3.13.0
-      - primp==0.12.1
-      - propcache==0.2.1
-      - proto-plus==1.26.0
-      - protobuf==5.29.3
-      - pyarrow==19.0.0
-      - pyasn1==0.6.1
-      - pyasn1-modules==0.4.1
-      - pydantic==2.10.6
-      - pydantic-core==2.27.2
-      - pydeck==0.9.1
-      - pygments==2.19.1
-      - pyowm==3.3.0
-      - pyparsing==3.2.1
-      - pypdf2==3.0.1
-      - pypika==0.48.9
-      - pyproject-hooks==1.2.0
-      - python-dateutil==2.9.0.post0
-      - python-dotenv==1.0.1
-      - python-multipart==0.0.20
-      - pytz==2025.1
-      - qdrant-client==1.13.2
-      - referencing==0.36.2
-      - regex==2024.11.6
-      - requests-oauthlib==2.0.0
-      - rich==13.9.4
-      - rpds-py==0.22.3
-      - rsa==4.9
-      - s3transfer==0.11.2
-      - serpapi==0.1.5
-      - setuptools==75.6.0
-      - shellingham==1.5.4
-      - six==1.17.0
-      - smmap==5.0.2
-      - sniffio==1.3.1
-      - soupsieve==2.6
-      - sqlalchemy==2.0.38
-      - sse-starlette==1.8.2
-      - starlette==0.45.3
-      - streamlit==1.40.2
-      - sympy==1.13.3
-      - tiktoken==0.8.0
-      - tokenizers==0.21.0
-      - toml==0.10.2
-      - tomlkit==0.13.2
-      - tornado==6.4.2
-      - tqdm==4.67.1
-      - typer==0.9.4
-      - tzdata==2025.1
-      - uritemplate==4.1.1
-      - userpath==1.9.2
-      - uv==0.5.30
-      - uvicorn==0.23.2
-      - uvloop==0.21.0
-      - watchfiles==1.0.4
-      - websocket-client==1.8.0
-      - websockets==14.2
-      - werkzeug==3.1.3
-      - wrapt==1.17.2
-      - yarl==1.18.3
-      - zipp==3.21.0
-      - zstandard==0.23.0
-prefix: /opt/anaconda3/envs/langchain_env
+    - flask==3.0.0
+    - requests==2.31.0
+    - beautifulsoup4==4.12.2
+    - chromadb==0.4.15
+    - tiktoken==0.5.1
+    - python-dotenv==1.0.0
+    - pyyaml==6.0.1
+    - pytest==7.4.0
